--- a/00-pretextual.tex
+++ b/00-pretextual.tex
@@ -208,10 +208,7 @@ Zootecnia, Universidade de São Paulo, São Paulo, 2011.
 % inserir lista de abreviaturas e siglas
 % ---
 \listarsiglas
-\begin{siglas}
-  \item[ABNT] Associação Brasileira de Normas Técnicas
-  \item[abnTeX] ABsurdas Normas para TeX
-\end{siglas}
+\lsiglas  % listar siglas do arquivo 00-dados.tex
 %\cleardoublepage
 % ---
 
@@ -219,12 +216,7 @@ Zootecnia, Universidade de São Paulo, São Paulo, 2011.
 % inserir lista de símbolos
 % ---
 \listarsimbolos
-\begin{simbolos}
-  \item[$ \Gamma $] Letra grega Gama
-  \item[$ \Lambda $] Lambda
-  \item[$ \zeta $] Letra grega minúscula zeta
-  \item[$ \in $] Pertence
-\end{simbolos}
+ \lsimbolos % listar simoblos do arquivo 00-dados.tex
 %\cleardoublepage
 % ---
 
