--- a/main.tex
+++ b/main.tex
@@ -74,15 +74,27 @@
 % Início do documento
 % ----------------------------------------------------------
 \begin{document}
+% ----------------------------------------------------------
+% Adequando o uppercase titulo dos elementos nas suas respectivas legendas
+% Definicoes que n\~ao funcionaram quando colocados no arquivo de estilos ou de pacotes
+
 \renewcommand{\bibname}{\uppercase{REFER\^ENCIAS}}
+\renewcommand{\tablename}{TABELA }
+\renewcommand{\figurename}{FIGURA }
+\renewcommand{\figureautorefname}{FIGURA}
+\renewcommand{\tableautorefname}{TABELA}
 
 \input{00-pretextual}
 
 % ----------------------------------------------------------
 % ELEMENTOS TEXTUAIS
 % ----------------------------------------------------------
-\textual
-\pagestyle{textualUFPR}
+\textual % \pagestyle{textualUFPR}
+
+\pagestyle{simple}
+% sugerido por Youssef Cherem 20170316
+% https://mail.google.com/mail/u/0/?tab=wm#inbox/15ad3fe6f4e5ff1f
+
 
 % ----------------------------------------------------------
 % Introdução (exemplo de capítulo sem numeração, mas presente no Sumário)
