pack para criar simbolos, siglas e verbetes
linha 26 

This work has the LPPL maintenance status `maintained'.
%% 
%% The Current Maintainer of this work is José Paulo Lima,
% josepaulolima@gmail.com
%%
%% Further information about abnTeX2 are available on http://abntex2.googlecode.com/
%%

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -23,7 +23,7 @@
 \usepackage[style=long]{glossaries}
 
 
-%\usepackage{abntex2glossaries}
+\usepackage{abntex2glossaries}
 % ---
 % Pacotes de citações
 % ---
