habilitado abntex2glossaries
linhas 202 a 229 comentadas, pois os termos das listas sao criados pelo pacote criado pelo 
José Paulo Lima,
josepaulolima@gmail.coml

--- a/00-dados.tex
+++ b/00-dados.tex
@@ -199,8 +199,8 @@ projeto abn\TeX\ foram extraídos de \url{http://codigolivre.org.br/projects/abn
 	}
 % ---	
 
-\newcommand{\lsiglas}{
-\begin{siglas}
+%\newcommand{\lsiglas}{
+%\begin{siglas}
 %   \item [AEC] Arquitetura, Engenharia e Construção.
 %   \item [API] Application Programming Interface ou Interface de Programação de Aplicativo.
 %   \item [BIM] Building Information Modeling ou Modelagem da Informação da Construção.
@@ -215,15 +215,15 @@ projeto abn\TeX\ foram extraídos de \url{http://codigolivre.org.br/projects/abn
 %   \item [VBA] Visual Basic Application.
 %   \item [VPL] Visual Programming Language ou Linguagem de Programação Visual.
 %   \item [2D] 2 Dimensões (2D, 3D, 4D, 5D, ...).
-\item[FFT] Transformadas R\'apidas de Fourier. 
-\end{siglas}  
-}
+%\item[FFT] Transformadas R\'apidas de Fourier. 
+%\end{siglas}  
+%}
 
-\def\lsimbolos{
+%\def\lsimbolos{
 % \begin{simbolos}
 %   \item[$\Gamma$] Letra grega Gama
 %   \item[$\Lambda$] Lambda
 %   \item[$ \zeta $] Letra grega minúscula zeta
 %   \item[$ \in $] Pertence
 % \end{simbolos}
-}
+%}
