habilitado abntex2glossaries
as linhas 210 e 218 habilitados para criar lista de siglas e de símbolos

--- a/00-pretextual.tex
+++ b/00-pretextual.tex
@@ -208,7 +208,7 @@ Zootecnia, Universidade de São Paulo, São Paulo, 2011.
 % inserir lista de abreviaturas e siglas
 % ---
 \listarsiglas
-\lsiglas  % listar siglas do arquivo 00-dados.tex
+%\lsiglas  % listar siglas do arquivo 00-dados.tex
 %\cleardoublepage
 % ---
 
@@ -216,7 +216,7 @@ Zootecnia, Universidade de São Paulo, São Paulo, 2011.
 % inserir lista de símbolos
 % ---
 \listarsimbolos
- \lsimbolos % listar simoblos do arquivo 00-dados.tex
+% \lsimbolos % listar simoblos do arquivo 00-dados.tex
 %\cleardoublepage
 % ---
 
