--- a/main.tex
+++ b/main.tex
@@ -99,48 +99,7 @@
 % ----------------------------------------------------------
 % Introdução (exemplo de capítulo sem numeração, mas presente no Sumário)
 % ----------------------------------------------------------
-\chapter[INTRODUÇÃO]{INTRODUÇÃO}
-%\addcontentsline{toc}{chapter}{INTRODUÇÃO}
-
-
-\begin{itemize}
- \item para inserir uma sigla: \verb|\sigla|\{ABNT\}{Associa\c{c}\~ao Brasileira de Normas T\'ecnicas}
-\end{itemize}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Usado para testar o formato uppercase dos t\'itulos 
-% em maiusculas nas respectivas listas
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{table}[!ht]
- \centering
- \par\caption{TesTANDO TABELAS}
- \begin{tabular}{c|c|c}
- teste1&teste1&teste1\\\hline\hline
-  1&2&3\\\hline
- \end{tabular}
- \label{tab:tab01}
-\end{table}
-
-\begin{figure}[!ht]
- \centering
- \includegraphics[width=.50\textwidth]{figure}
- 
- \caption{teste DE FIGURAS}
- \label{fig:01}
-\end{figure}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\section{COMENTÁRIOS}
-\subsection{COMENTÁRIOS}
-\subsubsection{COMENTÁRIOS}
-% ----------------------------------------------------------
-%\input{cap01}
-\chapter{TESTE}
-\sigla{ABC}{Santo André, São Bernardo do Campo e São Caetano do Sul}
-% \simbolo{$\alpha$}{alfa}
-
+\input{cap01}
 % ----------------------------------------------------------
 % PARTE DA PREPARAÇÃO DA PESQUISA
 % ----------------------------------------------------------
