--- a/cap01.tex
+++ b/cap01.tex
@@ -33,7 +33,7 @@
 
 \begin{figure}[!ht]
  \centering
-%  \includegraphics[width=.50\textwidth]{figure}
+  \includegraphics[width=.50\textwidth]{figure}
  
  \caption{teste DE FIGURAS}
  \label{fig:01}
