imprimir lista de siglas e simbolos corrigidos
Os comandos de criação de lista de simbolos e siglas não foram atualizados
Commands to create list of symbols and acronyms updated

--- a/00-pretextual.tex
+++ b/00-pretextual.tex
@@ -207,7 +207,8 @@ Zootecnia, Universidade de São Paulo, São Paulo, 2011.
 % ---
 % inserir lista de abreviaturas e siglas
 % ---
-\listarsiglas
+%\listarsiglas
+\imprimirlistadesiglas
 %\lsiglas  % listar siglas do arquivo 00-dados.tex
 %\cleardoublepage
 % ---
@@ -215,7 +216,8 @@ Zootecnia, Universidade de São Paulo, São Paulo, 2011.
 % ---
 % inserir lista de símbolos
 % ---
-\listarsimbolos
+\imprimirlistadesimbolos
+%\listarsimbolos
 % \lsimbolos % listar simoblos do arquivo 00-dados.tex
 %\cleardoublepage
 % ---
